tests/cases/standard-library/ok/format-print.ari
fn main() -> i64 {
  println("value={} ok={} byte={}", -3, true, 65 as u8);
  print("{{literal}} {}\n", 12);
  io::println("qualified={}", 2);
  return 0;
}
