tests/cases/standard-library/errors/format-placeholder-count.ari
fn main() -> i64 {
  println("value={} {}", 1);
  return 0;
}
